[update] cpp app and notebook

--- a/notebooks/2_pytorch_advanced.ipynb
+++ b/notebooks/2_pytorch_advanced.ipynb
@@ -180,9 +180,11 @@
    "source": [
     "## Create/Prepare Model\n",
     "\n",
-    "Now, we create a `learner` object by passing it our DataLoaders object and using a pretrained ResNet18 as our architechture.\n",
+    "Now, we create a `Learner` object by passing it our `DataLoaders` object and using a pretrained ResNet18 as our architechture. By setting `pretrained=True`, we can automatically download a set of pretrained weights for the ResNet18 architecture. Additionally, this function will delete the last layer of the pretrained weights and and create a new randomly initialized one to match the number of output classes in out dataset. This is a standard procedure in transfer learning and is also referred to as replacing the _head_ of the model. \n",
     "\n",
     "You also have to specify the metric that you want to use. In our case, as in most classification tasks, we want our model to achieve a high accuracy, which is defined as\n",
+    "\n",
+    "\n",
     "$$\n",
     "\\text{Accuracy} = \\frac{\\text{Number of correct predictions}}{\\text{Total number of predictions}}\n",
     "$$"
@@ -219,7 +221,9 @@
    "source": [
     "## Training the Model\n",
     "\n",
-    "... and finally we call `fine_tune` to train the model for 5 epochs."
+    "One particular challenge when training a model is to find a good learning rate. If the learning rate is very small, the training will be very slow and we might run into problems with overfitting. Choosing a very large learning rate is not a good option either because we will likely just overshoot the minimum loss.\n",
+    "\n",
+    "FastAI includes a [_learning rate finder_](https://docs.fast.ai/callback.schedule.html#Learner.lr_find) to automatically determine a good learning rate."
    ]
   },
   {
@@ -232,12 +236,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "learn.fit_one_cycle(5, learning_rate)"
+    "Now we can finally start the training by calling `fine_tune`. This is another FastAI convenience function that does the following: \n",
+    "* first, it trains only the _head_ of the model (this is the new, untrained part) for one epoch and\n",
+    "* then, it trains the whole model for the specified number of epochs."
    ]
   },
   {
@@ -246,17 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learning_rate, _ = learn.lr_find(show_plot=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn.unfreeze()\n",
-    "learn.fit_one_cycle(10, lr_max=slice(1e-5, learning_rate))"
+    "learn.fine_tune(5, learning_rate)"
    ]
   },
   {
@@ -265,7 +259,7 @@
    "source": [
     "## Interpreting the Training Results\n",
     "\n",
-    "After 5 epochs of training, you should see an accuracy of >70 %. This may not seem very impressive at first but keep in mind that we just trained the model for a couple of minutes. Also, we are working with 50 output classes! \n",
+    "After 5 epochs of training, you should see an accuracy of ~70 %. This may not seem very impressive at first but keep in mind that we just trained the model for a couple of minutes. Also, we are working with 50 output classes! \n",
     "\n",
     "If you have a look at the [original experiment](https://github.com/hasithsura/Environmental-Sound-Classification), you can see that with some further training it is easy to achieve an accuracy of over 85 %.\n",
     "\n",
@@ -325,7 +319,7 @@
     "\n",
     "Tracing a model will invoke it with some _example input_ and record all the operations that occur during its execution. These recorded operations will then be saved into a static representation of our model (called _graph_).\n",
     "\n",
-    "In our case, all we need to do is call `torch.jit.trace()`, passing our model and some dummy input as arguments. As dummy input, we will use a random tensor that has the same shape as our spectrograms during training (`[1, 128, 157]`, i.e. `[n_channels, n_mels, n_frames]`), "
+    "In our case, all we need to do is call `torch.jit.trace()`, passing our model and some dummy input as arguments. As dummy input, we will use a random tensor that has the same shape as our spectrograms during training (`[3, 128, 157]`, i.e. `[n_channels, n_mels, n_frames]`), "
    ]
   },
   {
@@ -369,36 +363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save the Vocabulary\n",
-    "\n",
-    "Our model does not directly output a string with the predicted category. Rather, it outputs a vector containing an unnormalized score for each of the categories in our vocabulary. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn.model(torch.randn(1, 3, 128, 157))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "These are oredered in the same way as our vocabulary, so converting the model output to the string of the predicted category is straightforward: we just need to find the index of the item with the highest score (using `argmax()`) and use this as an index into our vocabulary vector.\n",
-    "\n",
-    "To be able to perform this mapping directly in out C++ application, we our vocabulary into a header file that will automatically be placed in the C++ source directory:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dls.vocab"
+    "Our model does not directly output a string with the predicted category (more on this later). To be able to map the model output to the winning category string in the C++ application, we need to have a list of all categories. Our `DataLoaders` objects holds such a list as its `vocab` attribute. We write this list into header file and place it in the C++ source directory:"
    ]
   },
   {
@@ -414,23 +379,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For good measure, we will also export the `vocab` list as a [pickle](https://docs.python.org/3/library/pickle.html) file, so we can easily reuse in some other Python script if we need to."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(TRAIN_DIR/'esc-model-vocab.pkl', 'wb') as f:\n",
-    "    pickle.dump(dls.vocab, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Inference Phase"
    ]
   },
@@ -440,7 +388,7 @@
    "source": [
     "## Setting up a Test Dataset\n",
     "\n",
-    "The `DataLoader` class we used earlier automatically takes care of splitting the dataset into training and validation sets. For testing purposes, however, we cannot use samples from either of these. This leaves us with two options:\n",
+    "The `DataLoader` class we used earlier automatically takes care of splitting the dataset into training and validation sets. For testing purposes, however, we usually cannot use samples from either of these. This leaves us with two options:\n",
     "\n",
     "1. splitting off some items of the dataset for testing before creating the `DataLoader` for training or\n",
     "2. using new samples, e.g. from a different dataset.\n",
@@ -476,11 +424,11 @@
     "    '368804__inspectorj__sneeze-single-b.wav': 'sneezing',\n",
     "    '347544__masgame__mouse-click-sounds.wav': 'mouse_click',\n",
     "    '207457__aureliosons__avion-de-elices.wav': 'airplane',\n",
-    "    '27130__pryght-one__harp.wav': 'harp (unknown)',\n",
     "    '439667__teumova__child-laughing.wav': 'laughing',\n",
-    "    '515685__acekat13__adriana-lopez-coffee-machine.wav': 'coffee_machine (unknown)',\n",
     "    '544376__kingrock2009__siren-1.wav': 'siren',\n",
     "    '362283__zachrau__sheep-bleating.wav': 'sheep',\n",
+    "    '515685__acekat13__adriana-lopez-coffee-machine.wav': 'coffee_machine (unknown)',\n",
+    "    '27130__pryght-one__harp.wav': 'harp (unknown)',\n",
     "    '550708__erokia__msfxp9-14-synth-loop-100-bpm.wav': 'synth_loop (unknown)'\n",
     "}"
    ]
@@ -548,8 +496,8 @@
    "source": [
     "# save test samples as named buffers in a module\n",
     "container = torch.nn.Module()\n",
-    "for l, s in label_to_spectrogram.items():\n",
-    "    container.register_buffer(l, torch.tensor(s))\n",
+    "for label, spec in label_to_spectrogram.items():\n",
+    "    container.register_buffer(label, torch.tensor(spec))\n",
     "    \n",
     "# save to torch script module\n",
     "torch.jit.save(torch.jit.script(container), str(TEST_DIR/'inputs.pt'))"
@@ -692,7 +640,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using `ipywidgets` to interactively explore our results"
+    "# Further Exploration of the Results in Python\n",
+    "\n",
+    "In the C++ application, we saved the result of the inference to disk. We can load it again from Python using `torch.load()` to explore it a little more interactively."
    ]
   },
   {
@@ -701,14 +651,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs = next(torch.load(outputs_path).parameters())"
+    "outputs = next(torch.load(outputs_path).parameters()).detach()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the output contains unnormalized scores we use `softmax` to convert them into probabilities."
+    "The result is a tensor of shape `[n_samples, n_categories]`. Each row contains the output of one of the samples from our little test set. "
    ]
   },
   {
@@ -717,7 +667,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs_prob = torch.softmax(outputs.detach(), dim=1)\n",
+    "outputs.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's have a look at the first row, i.e. the first test sample."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each row contains an unnormalized score for each of our categories. To identify the categories we can have a look at the `vocab` attribute of our `DataLoaders` object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dls.vocab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The scores correspond directly to the categories in the `vocab` list, i.e. \n",
+    "* the first item is the score of the `airplane` category,\n",
+    "* the second item is the score of the `breathing` category,\n",
+    "\n",
+    "and so on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As our classification result, we simply pick the item with the highest score:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = outputs[0].max()\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, in order to display the actual category string from the `vocab`, we need to find the index of the item returned by `max()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = outputs[0].argmax()\n",
+    "idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Test sample 0 is classified as: \\'{dls.vocab[idx]}\\' ({score=:.2f})')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of working with unnormalized scores, it would be nice to display probabilities (s.t. the sum of each row equals 1). The `softmax` function does exactly this for us:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs_prob = outputs.softmax(dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "outputs_prob[0]"
    ]
   },
@@ -731,9 +791,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = outputs_prob[0].max()\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Test sample 0 is classified as: \\'{dls.vocab[idx]}\\' ({p=:.2f})')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Making it Interactive with `ipywidgets`\n",
+    "\n",
     "Using `ipywidgets`, we can create GUI widgets to interactively explore our results. At first, we define a dropdown menu that contains the labels from our test samples:"
    ]
   },
@@ -836,9 +917,17 @@
     "\n",
     "Using our trained model and `ipywidgets`, we can even build a small application right here from inside the notebook (inspired an example from the [fast.ai course](https://course.fast.ai/videos/?lesson=3https://course.fast.ai/videos/?lesson=3)).\n",
     "\n",
-    "Select \n",
-    "\n",
     "Note: selecting an audio file longer than 5 s and classifying it multiple times might yield different results due to a random cropping in the `ResizeSignal` transform.Note: selecting an audio file longer than 5 s and classifying it multiple times might yield different results due to a random cropping in the `ResizeSignal` transform."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(TRAIN_DIR/'esc-model-vocab.pkl', 'wb') as f:\n",
+    "    pickle.dump(dls.vocab, f)"
    ]
   },
   {
@@ -894,6 +983,17 @@
     "btn_upload.observe(reset_button, names=['value'])\n",
     "\n",
     "widgets.VBox([widgets.HBox([btn_upload, label_upload]), audio_player, btn_classify, output])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Further Reading\n",
+    "\n",
+    "* [Using the PyTorch C++ Frontent](https://pytorch.org/tutorials/advanced/cpp_frontend.html)\n",
+    "* [ML Cheatsheet](https://ml-cheatsheet.readthedocs.io/en/latest/index.html): brief visual explanations of machine learning concepts with diagrams\n",
+    "* [distill.pub](https://distill.pub/): excellent articles about various ML-related topics"
    ]
   },
   {
