[update] colab notebook

--- a/notebooks/3_pytorch_advanced_colab.ipynb
+++ b/notebooks/3_pytorch_advanced_colab.ipynb
@@ -199,7 +199,8 @@
    "outputs": [],
    "source": [
     "audio2spec = AudioToSpec.from_cfg(AudioConfig.BasicMelSpectrogram(sample_rate=16000, n_fft=2048, hop_length=512, n_mels=128))\n",
-    "normalize = AudioNormalize()"
+    "normalize = AudioNormalize()\n",
+    "gray2rgb = SpectrogramToFakeRGB()"
    ]
   },
   {
@@ -214,7 +215,7 @@
     "    get_x = ColReader('filename', pref=DATASET_ROOT/'audio'),\n",
     "    get_y = ColReader('category'),\n",
     "    item_tfms=[normalize],\n",
-    "    batch_tfms=[audio2spec],\n",
+    "    batch_tfms=[audio2spec, gray2rgb],\n",
     ")"
    ]
   },
@@ -234,9 +235,11 @@
    "source": [
     "## Create/Prepare Model\n",
     "\n",
-    "Now, we create a `learner` object by passing it our DataLoaders object and using a pretrained ResNet18 as our architechture.\n",
+    "Now, we create a `Learner` object by passing it our `DataLoaders` object and using a pretrained ResNet18 as our architechture. By setting `pretrained=True`, we can automatically download a set of pretrained weights for the ResNet18 architecture. Additionally, this function will delete the last layer of the pretrained weights and and create a new randomly initialized one to match the number of output classes in out dataset. This is a standard procedure in transfer learning and is also referred to as replacing the _head_ of the model. \n",
     "\n",
-    "You also have to specify the metric that you want to use. In our case, as in most classification tasks, we want our model to achieve a high accuracy, which is defined as \n",
+    "You also have to specify the metric that you want to use. In our case, as in most classification tasks, we want our model to achieve a high accuracy, which is defined as\n",
+    "\n",
+    "\n",
     "$$\n",
     "\\text{Accuracy} = \\frac{\\text{Number of correct predictions}}{\\text{Total number of predictions}}\n",
     "$$"
@@ -249,38 +252,6 @@
    "outputs": [],
    "source": [
     "learn = cnn_learner(dls, models.resnet18, metrics=[accuracy], pretrained=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The ResNet models work on RGB images, i.e. the input layer expects an image with three channels. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn.model[0][0].in_channels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Our spectrograms only have a single channel, so we need to modify the first layer of the model slightly to take our spectrograms as input."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "make_xresnet_grayscale(learn.model)"
    ]
   },
   {
@@ -305,7 +276,9 @@
    "source": [
     "## Training the Model\n",
     "\n",
-    "... and finally we call `fine_tune` to train the model for 5 epochs."
+    "One particular challenge when training a model is to find a good learning rate. If the learning rate is very small, the training will be very slow and we might run into problems with overfitting. Choosing a very large learning rate is not a good option either because we will likely just overshoot the minimum loss.\n",
+    "\n",
+    "FastAI includes a [_learning rate finder_](https://docs.fast.ai/callback.schedule.html#Learner.lr_find) to automatically determine a good learning rate."
    ]
   },
   {
@@ -314,7 +287,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "learn.fine_tune(5)"
+    "learning_rate, _ = learn.lr_find(show_plot=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we can finally start the training by calling `fine_tune`. This is another FastAI convenience function that does the following: \n",
+    "* first, it trains only the _head_ of the model (this is the new, untrained part) for one epoch and\n",
+    "* then, it trains the whole model for the specified number of epochs."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "learn.fine_tune(5, learning_rate)"
    ]
   },
   {
@@ -323,7 +314,7 @@
    "source": [
     "## Interpreting the Training Results\n",
     "\n",
-    "After 5 epochs of training, you should see an accuracy of ~65 %. This may not seem very good but keep in mind that we just trained the model for a couple of minutes. Also, we are working with 50 output classes! \n",
+    "After 5 epochs of training, you should see an accuracy of ~70 %. This may not seem very good but keep in mind that we just trained the model for a couple of minutes. Also, we are working with 50 output classes! \n",
     "\n",
     "If you have a look at the [original experiment](https://github.com/hasithsura/Environmental-Sound-Classification), you can see that with some further training it is easy to achieve an accuracy of over 85 %.\n",
     "\n",
@@ -427,36 +418,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Save the Vocabulary\n",
-    "\n",
-    "Our model does not directly output a string with the predicted category. Rather, it outputs a vector containing an unnormalized score for each of the categories in our vocabulary. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learn.model(torch.randn(1, 1, 128, 157))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "These are oredered in the same way as our vocabulary, so converting the model output to the string of the predicted category is straightforward: we just need to find the index of the item with the highest score (using `argmax()`) and use this as an index into our vocabulary vector.\n",
-    "\n",
-    "To be able to perform this mapping directly in out C++ application, we our vocabulary into a header file that will automatically be placed in the C++ source directory:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dls.vocab"
+    "Our model does not directly output a string with the predicted category (more on this later). To be able to map the model output to the winning category string in the C++ application, we need to have a list of all categories. Our `DataLoaders` objects holds such a list as its `vocab` attribute. We write this list into header file and place it in the C++ source directory:"
    ]
   },
   {
@@ -466,23 +428,6 @@
    "outputs": [],
    "source": [
     "write_vocab_cpp_header(dls.vocab)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For good measure, we will also export the `vocab` list as a [pickle](https://docs.python.org/3/library/pickle.html) file, so we can easily reuse in some other Python script if we need to."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(TRAIN_DIR/'esc-model-vocab.pkl', 'wb') as f:\n",
-    "    pickle.dump(dls.vocab, f)"
    ]
   },
   {
@@ -534,12 +479,12 @@
     "    '368804__inspectorj__sneeze-single-b.wav': 'sneezing',\n",
     "    '347544__masgame__mouse-click-sounds.wav': 'mouse_click',\n",
     "    '207457__aureliosons__avion-de-elices.wav': 'airplane',\n",
-    "    '27130__pryght-one__harp.wav': 'harp (unknown category)',\n",
     "    '439667__teumova__child-laughing.wav': 'laughing',\n",
-    "    '515685__acekat13__adriana-lopez-coffee-machine.wav': 'coffee_machine (unknown category)',\n",
     "    '544376__kingrock2009__siren-1.wav': 'siren',\n",
     "    '362283__zachrau__sheep-bleating.wav': 'sheep',\n",
-    "    '550708__erokia__msfxp9-14-synth-loop-100-bpm.wav': 'synth_loop (unknown category)'\n",
+    "    '515685__acekat13__adriana-lopez-coffee-machine.wav': 'coffee_machine (unknown)',\n",
+    "    '27130__pryght-one__harp.wav': 'harp (unknown)',\n",
+    "    '550708__erokia__msfxp9-14-synth-loop-100-bpm.wav': 'synth_loop (unknown)'\n",
     "}"
    ]
   },
@@ -568,8 +513,9 @@
     "resize_to_5s = ResizeSignal(5000, pad_mode=AudioPadType.Zeros_After)\n",
     "resample_to_16khz = Resample(16000)\n",
     "downmix = DownmixMono()\n",
+    "gray2rgb_single = SpectrogramToFakeRGB(as_batch_tfm=False)\n",
     "\n",
-    "transforms = Pipeline([AudioTensor.create, resize_to_5s, downmix, resample_to_16khz, normalize, audio2spec])"
+    "transforms = Pipeline([AudioTensor.create, resize_to_5s, downmix, resample_to_16khz, normalize, audio2spec, gray2rgb_single])"
    ]
   },
   {
@@ -746,7 +692,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using `ipywidgets` to interactively explore our results"
+    "# Further Exploration of the Results in Python\n",
+    "\n",
+    "In the C++ application, we saved the result of the inference to disk. We can load it again from Python using `torch.load()` to explore it a little more interactively."
    ]
   },
   {
@@ -755,14 +703,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs = next(torch.load(outputs_path).parameters())"
+    "outputs = next(torch.load(outputs_path).parameters()).detach()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As the output contains unnormalized scores we use `softmax` to convert them into probabilities."
+    "The result is a tensor of shape `[n_samples, n_categories]`. Each row contains the output of one of the samples from our little test set. "
    ]
   },
   {
@@ -771,7 +719,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "outputs_prob = torch.softmax(outputs.detach(), dim=1)\n",
+    "outputs.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's have a look at the first row, i.e. the first test sample."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Each row contains an unnormalized score for each of our categories. To identify the categories we can have a look at the `vocab` attribute of our `DataLoaders` object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dls.vocab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The scores correspond directly to the categories in the `vocab` list, i.e. \n",
+    "* the first item is the score of the `airplane` category,\n",
+    "* the second item is the score of the `breathing` category,\n",
+    "\n",
+    "and so on."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As our classification result, we simply pick the item with the highest score:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "score = outputs[0].max()\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, in order to display the actual category string from the `vocab`, we need to find the index of the item returned by `max()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx = outputs[0].argmax()\n",
+    "idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Test sample 0 is classified as: \\'{dls.vocab[idx]}\\' ({score=:.2f})')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of working with unnormalized scores, it would be nice to display probabilities (s.t. the sum of each row equals 1). The `softmax` function does exactly this for us:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs_prob = outputs.softmax(dim=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "outputs_prob[0]"
    ]
   },
@@ -785,9 +843,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = outputs_prob[0].max()\n",
+    "p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Test sample 0 is classified as: \\'{dls.vocab[idx]}\\' ({p=:.2f})')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Making it Interactive with `ipywidgets`\n",
+    "\n",
     "Using `ipywidgets`, we can create GUI widgets to interactively explore our results. At first, we define a dropdown menu that contains the labels from our test samples:"
    ]
   },
@@ -842,10 +921,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def on_dropdown(_):\n",
+    "def on_dropdown(change):\n",
     "    output.clear_output()\n",
     "    with output:\n",
-    "        print_top_results(dropdown.index, outputs_prob, test_labels, dls.vocab)\n",
+    "        print_top_results(change['new'], outputs_prob, test_labels, dls.vocab)\n",
     "    \n",
     "dropdown.observe(on_dropdown, names=['index'])"
    ]
@@ -861,7 +940,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also combine these widgets into Layouts:"
+    "We can also combine these widgets into Layouts:\n",
+    "\n",
+    "**This will not work in Google Colab!**"
    ]
   },
   {
@@ -871,10 +952,10 @@
    "outputs": [],
    "source": [
     "output_plot = widgets.Output()\n",
-    "def on_dropdown(_):\n",
+    "def on_dropdown(change):\n",
     "    output_plot.clear_output()\n",
     "    with output_plot:\n",
-    "        fig, _ = plot_top_results(outputs_prob[dropdown.index], dls.vocab, show_max=10, figsize=(5,3))\n",
+    "        fig, _ = plot_top_results(outputs_prob[change['new']], dls.vocab, show_max=10, figsize=(5,3))\n",
     "        fig.canvas.toolbar_visible = False\n",
     "        fig.tight_layout()\n",
     "dropdown.observe(on_dropdown, names=['index'])\n",
@@ -890,9 +971,19 @@
     "\n",
     "Using our trained model and `ipywidgets`, we can even build a small application right here from inside the notebook (inspired an example from the [fast.ai course](https://course.fast.ai/videos/?lesson=3https://course.fast.ai/videos/?lesson=3)).\n",
     "\n",
-    "Select \n",
+    "Note: selecting an audio file longer than 5 s and classifying it multiple times might yield different results due to a random cropping in the `ResizeSignal` transform.Note: selecting an audio file longer than 5 s and classifying it multiple times might yield different results due to a random cropping in the `ResizeSignal` transform.\n",
     "\n",
-    "Note: selecting an audio file longer than 5 s and classifying it multiple times might yield different results due to a random cropping in the `ResizeSignal` transform.Note: selecting an audio file longer than 5 s and classifying it multiple times might yield different results due to a random cropping in the `ResizeSignal` transform."
+    "**This will not work in Google Colab!**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(TRAIN_DIR/'esc-model-vocab.pkl', 'wb') as f:\n",
+    "    pickle.dump(dls.vocab, f)"
    ]
   },
   {
@@ -928,7 +1019,7 @@
     "\n",
     "    # load tensor from tmp file and apply transforms\n",
     "    spec = torch.tensor(transforms(tmp.name))\n",
-    "    probs = model(spec.unsqueeze(0)).softmax(dim=1).squeeze().detach()\n",
+    "    probs = model(spec.unsqueeze(0)).detach().softmax(dim=1).squeeze()\n",
     "    result_idx = probs.argmax()\n",
     "    output.clear_output()\n",
     "    with output:\n",
@@ -949,6 +1040,24 @@
     "\n",
     "widgets.VBox([widgets.HBox([btn_upload, label_upload]), audio_player, btn_classify, output])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Further Reading\n",
+    "\n",
+    "* [Using the PyTorch C++ Frontent](https://pytorch.org/tutorials/advanced/cpp_frontend.html)\n",
+    "* [ML Cheatsheet](https://ml-cheatsheet.readthedocs.io/en/latest/index.html): brief visual explanations of machine learning concepts with diagrams\n",
+    "* [distill.pub](https://distill.pub/): excellent articles about various ML-related topics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
