[fix] some small issues

--- a/notebooks/3_pytorch_advanced_colab.ipynb
+++ b/notebooks/3_pytorch_advanced_colab.ipynb
@@ -388,7 +388,7 @@
     "    learn.model.to('cpu')\n",
     "    \n",
     "# create some dummy input \n",
-    "dummy_input = torch.randn([1, 1, 128, 157])\n",
+    "dummy_input = torch.randn([1, 3, 128, 157])\n",
     "    \n",
     "# process the trace\n",
     "traced_script_module = torch.jit.trace(learn.model, dummy_input)"
@@ -805,7 +805,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Test sample 0 is classified as: \\'{dls.vocab[idx]}\\' ({score=:.2f})')"
+    "print(f'Test sample 0 is classified as: \\'{dls.vocab[idx]}\\' (score={score:.2f})')"
    ]
   },
   {
@@ -858,7 +858,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Test sample 0 is classified as: \\'{dls.vocab[idx]}\\' ({p=:.2f})')"
+    "print(f'Test sample 0 is classified as: \\'{dls.vocab[idx]}\\' (p={p:.2f})')"
    ]
   },
   {
@@ -942,7 +942,7 @@
    "source": [
     "We can also combine these widgets into Layouts:\n",
     "\n",
-    "**This will not work in Google Colab!**"
+    "**This will not work properly in Google Colab!**"
    ]
   },
   {
@@ -973,17 +973,7 @@
     "\n",
     "Note: selecting an audio file longer than 5 s and classifying it multiple times might yield different results due to a random cropping in the `ResizeSignal` transform.Note: selecting an audio file longer than 5 s and classifying it multiple times might yield different results due to a random cropping in the `ResizeSignal` transform.\n",
     "\n",
-    "**This will not work in Google Colab!**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(TRAIN_DIR/'esc-model-vocab.pkl', 'wb') as f:\n",
-    "    pickle.dump(dls.vocab, f)"
+    "**This will not work properly in Google Colab!**"
    ]
   },
   {
